2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/effects/audioresync/Makefile.am:
	Add missing files to Makefile.am
	* flumotion/component/effects/audioresync (svn:ignore):
	Add missing files to svn:ignore


2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt
	* ChangeLog:
	* configure.ac:
	* flumotion/component/effects/Makefile.am:
	* flumotion/component/effects/audioresync/Makefile.am:
	* flumotion/component/effects/audioresync/__init__.py:
	* flumotion/component/effects/audioresync/admin_gtk.py:
	* flumotion/component/effects/audioresync/audioresync.glade:
	* flumotion/component/effects/audioresync/audioresync.py:
	* flumotion/component/effects/audioresync/audioresync.xml:
	Add audio resynchroniser effect

2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt
	* flumotion/common/registry.py:
	Add more logging to the registry

2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt
	* flumotion/component/decoders/generic/generic.py:
	Fix generic decoder's synchronisation element:
	 - Make it thread safe (audio and video can be in different threads).
	 - Retimestamp buffers using a common sync point for audio and video
		and adding the buffer's running time calculated from the start of
		the current segment to avoid desynchronisations whilst increasing
		continuously the timetamps of the outgoing buffers.
	 - Only drop new segment event and forward the rest.
	 - Send a flumotion-reset event when the decoder is restarted.

2010-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  Log timestamp discontinuities with nanosecond precision, so we
	  actually see the 1 ns discontinuity on Theora.

2010-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/format.py:
	  Support displaying of negative values in seconds.