@@ -188,6 +188,24 @@ class HTTPStreamingResource(web_resource.Resource, log.Loggable):
     def setRedirectionOnLimits(self, url):
         self._redirectOnFull = url
 
+    def _setRequestHeaders(self, request):
+        content = self.streamer.get_content_type()
+        request.setHeader('Server', HTTP_SERVER)
+        request.setHeader('Date', http.datetimeToString())
+        request.setHeader('Connection', 'close')
+        request.setHeader('Cache-Control', 'no-cache')
+        request.setHeader('Cache-Control', 'private')
+        request.setHeader('Content-type', content)
+
+    def _formatHeaders(self, request):
+        # Mimic Twisted as close as possible
+        headers = []
+        for name, value in request.headers.items():
+            headers.append('%s: %s\r\n' % (name, value))
+        for cookie in request.cookies:
+            headers.append('%s: %s\r\n' % ("Set-Cookie", cookie))
+        return headers
+
     # FIXME: rename to writeHeaders
 
     def _writeHeaders(self, request):
@@ -210,25 +228,13 @@ class HTTPStreamingResource(web_resource.Resource, log.Loggable):
             # FIXME: do this ? del request
             return False
 
-        content = self.streamer.get_content_type()
-        request.setHeader('Server', HTTP_SERVER)
-        request.setHeader('Date', http.datetimeToString())
-        request.setHeader('Connection', 'close')
-        request.setHeader('Cache-Control', 'no-cache')
-        request.setHeader('Cache-Control', 'private')
-        request.setHeader('Content-type', content)
+        self._setRequestHeaders(request)
 
         # Call request modifiers
         for modifier in self.modifiers:
             modifier.modify(request)
 
-        # Mimic Twisted as close as possible
-        headers = []
-        for name, value in request.headers.items():
-            headers.append('%s: %s\r\n' % (name.capitalize(), value))
-        for cookie in request.cookies:
-            headers.append('%s: %s\r\n' % ("Set-Cookie", cookie))
-
+        headers = self._formatHeaders(request)
 
         # ASF needs a Pragma header for live broadcasts
         # Apparently ASF breaks on WMP port 80 if you use the pragma header
@@ -498,7 +504,7 @@ class HTTPStreamingResource(web_resource.Resource, log.Loggable):
             return
 
         # hand it to multifdsink
-        self.streamer.add_client(fd)
+        self.streamer.add_client(fd, request)
         ip = request.getClientIP()
 
         # PROBE: started request; see httpfile.httpfile
